[gd_scene load_steps=16 format=2]

[ext_resource path="res://SKINS/GreenSkin.tres" type="SpriteFrames" id=1]
[ext_resource path="res://Player.gd" type="Script" id=2]
[ext_resource path="res://fonts/cinnamon cake.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://Menu/PauseMenu.tscn" type="PackedScene" id=4]

[sub_resource type="Curve" id=8]
_data = [ Vector2( 0.0730337, 0.107955 ), 0.0, 0.0, 0, 0, Vector2( 0.398876, 0.526136 ), 0.0, 0.0, 0, 0, Vector2( 0.674157, 0.917045 ), 0.0, 0.0, 0, 0, Vector2( 0.921348, 0.144318 ), -4.75341, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=9]
curve = SubResource( 8 )

[sub_resource type="ParticlesMaterial" id=10]
emission_shape = 2
emission_box_extents = Vector3( 320, 180, 0 )
flag_disable_z = true
gravity = Vector3( 0, 0, 0 )
orbit_velocity = 0.0
orbit_velocity_random = 0.0
scale_curve = SubResource( 9 )

[sub_resource type="Gradient" id=11]
offsets = PoolRealArray( 0 )
colors = PoolColorArray( 1, 1, 1, 1 )

[sub_resource type="GradientTexture2D" id=12]
gradient = SubResource( 11 )
width = 1
height = 1

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 5, 6 )

[sub_resource type="DynamicFont" id=7]
size = 20
use_mipmaps = true
use_filter = true
font_data = ExtResource( 3 )

[sub_resource type="Animation" id=13]
resource_name = "CameraSpeed"
length = 2.5

[sub_resource type="Animation" id=4]
resource_name = "Change"
length = 1.5
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=5]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=6]
resource_name = "visible"
length = 1.5
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[node name="Player" type="KinematicBody2D"]
z_index = 10
collision_layer = 2
script = ExtResource( 2 )
JUMP_FORCE = -160
MAX_JUMPBOOST = -200
JUMP_RELEASE_FORCE = -40
WALL_JUMP = 75
MAXSPRINTSPEED = 175
GRAVITY = 5

[node name="Stars" type="Particles2D" parent="."]
z_index = -22
z_as_relative = false
emitting = false
amount = 200
lifetime = 2.5
explosiveness = 0.2
local_coords = false
process_material = SubResource( 10 )
texture = SubResource( 12 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
show_behind_parent = true
position = Vector2( 0, -7 )
scale = Vector2( 0.6, 0.6 )
frames = ExtResource( 1 )
animation = "Jump"
playing = true
flip_h = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -6 )
shape = SubResource( 3 )

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 0, -3 )
current = true
limit_left = 0
drag_margin_h_enabled = true
drag_margin_v_enabled = true
smoothing_enabled = true
smoothing_speed = 1.0
drag_margin_left = 0.15
drag_margin_top = 0.14
drag_margin_right = 0.15
drag_margin_bottom = 0.38
editor_draw_screen = false

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="coins" type="Label" parent="CanvasLayer"]
margin_top = 8.0
margin_right = 40.0
margin_bottom = 22.0
custom_fonts/font = SubResource( 7 )
text = "0"
align = 1
valign = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "CameraSpeed"
anims/CameraSpeed = SubResource( 13 )
anims/Change = SubResource( 4 )
anims/RESET = SubResource( 5 )
anims/visible = SubResource( 6 )

[node name="PauseMenu" parent="." instance=ExtResource( 4 )]
physics_interpolation_mode = 2
process_priority = 1

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="animation_started" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_started"]
